# flight-logger

./: .gitignore  CMakeLists.txt  configure.sh
.claude/: launch.json
.github/workflows/: deploy.yml
hardware/BMP390/: BMP390.kicad_mod  BMP390.kicad_sym
hardware/LSM6DSOX/: LSM6DSOX.kicad_sym  PQFN50P250X300X86-14N.kicad_mod
hardware/flight-logger/: flight-logger.kicad_prl  flight-logger.kicad_pro  flight-logger.kicad_sch
pwa/: package-lock.json  package.json  vite.config.ts  vite.pico.config.ts
pwa/.claude/: launch.json
pwa/src/: App.tsx  analysis.ts  api.ts  index.css  main.tsx  ourairports.ts  patternGeometry.ts
pwa/src/components/: MapView.tsx  SummaryView.tsx
pwa/src/pages/: FlightDetail.tsx  FlightList.tsx
src/: main.c
src/network/: credentials.c  credentials.h  dhcpserver.c  dhcpserver.h  httpserver.c  httpserver.h  lwipopts.h  wifi.c  wifi.h  wx_fetch.c  wx_fetch.h
src/sensors/: bmp390.c  bmp390.h  lsm6dsox.c  lsm6dsox.h
src/storage/: diskio.c  ffconf.h  flash_fs.c  flash_fs.h  logger.c  logger.h  sd_spi.c  sd_spi.h
